--- a/404.html
+++ b/404.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="Ph.D. Candidate">
+  <meta name="description" content="Ph.D. Student">
 
   
   <link rel="alternate" hreflang="en-us" href="/404.html">
@@ -231,7 +231,7 @@
   <meta property="og:site_name" content="Academic">
   <meta property="og:url" content="/404.html">
   <meta property="og:title" content="404 Page not found | Academic">
-  <meta property="og:description" content="Ph.D. Candidate"><meta property="og:image" content="img/map[gravatar:%!s(bool=false) shape:circle]">
+  <meta property="og:description" content="Ph.D. Student"><meta property="og:image" content="img/map[gravatar:%!s(bool=false) shape:circle]">
   <meta property="twitter:image" content="img/map[gravatar:%!s(bool=false) shape:circle]"><meta property="og:locale" content="en-us">
   
     
