--- a/publication/index.html
+++ b/publication/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="Ph.D. Candidate">
+  <meta name="description" content="Ph.D. Student">
 
   
   <link rel="alternate" hreflang="en-us" href="/publication/">
@@ -233,7 +233,7 @@
   <meta property="og:site_name" content="Academic">
   <meta property="og:url" content="/publication/">
   <meta property="og:title" content="Publications | Academic">
-  <meta property="og:description" content="Ph.D. Candidate"><meta property="og:image" content="img/map[gravatar:%!s(bool=false) shape:circle]">
+  <meta property="og:description" content="Ph.D. Student"><meta property="og:image" content="img/map[gravatar:%!s(bool=false) shape:circle]">
   <meta property="twitter:image" content="img/map[gravatar:%!s(bool=false) shape:circle]"><meta property="og:locale" content="en-us">
   
     
