--- a/publication/index.html
+++ b/publication/index.html
@@ -684,7 +684,7 @@
   
 
   <p class="powered-by">
-    Jianyu Wu 2020 &middot; 
+    Copyright © Wu Jianyu All rights reserved &middot; 
 
     Powered by the
     <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
